<resources>
    <string name="app_name">Quiz</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="choose_difficulty">Выберите сложность</string>
    <string name="easy">Легко</string>
    <string name="medium">средне</string>
    <string name="hard">Сложно</string>
    <string name="balance">Баланс:</string>
    <string name="not_enough_money">Недостаточно средств</string>
    <string name="are_you_sure">Вы точно хотите купить эти обои?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="bought_successful">Обои куплены</string>
</resources>