<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".view.MainActivity">

    <TextView
        android:id="@+id/choose_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="@id/top_guideline"
        android:text="@string/choose_difficulty"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/easy_button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:backgroundTint="@color/green"
        android:text="@string/easy"
        app:layout_constraintTop_toBottomOf="@id/top_guideline" />

    <Button
        android:id="@+id/medium_button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:backgroundTint="@color/yellow"
        android:text="@string/medium"
        app:layout_constraintTop_toBottomOf="@id/easy_button" />

    <Button
        android:id="@+id/hard_button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:backgroundTint="@color/red"
        android:text="@string/hard"
        app:layout_constraintTop_toBottomOf="@id/medium_button" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/top_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4"
         />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:visibility="gone"
        android:elevation="5dp"
        />

    <ImageButton
        android:id="@+id/shop_button"
        android:src="@drawable/ic_outline_shopping_cart_24"
        android:layout_width="50dp"
        android:background="@null"
        android:layout_height="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/balance_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/balance"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        />

    <TextView
        android:id="@+id/balance_counter_tv"
        android:layout_marginStart="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/balance_tv"
        app:layout_constraintStart_toEndOf="@id/balance_tv"
        app:layout_constraintBottom_toBottomOf="@id/balance_tv"
        tools:text="41"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/yellow"
        />

</androidx.constraintlayout.widget.ConstraintLayout>